--- a/CMake-Tutorial/m5l1_If_Else_Command/CMakeLists.txt
+++ b/CMake-Tutorial/m5l1_If_Else_Command/CMakeLists.txt
@@ -9,3 +9,9 @@ if(${VAR2})
 else()
 	message("Else block executed")
 endif()
+
+if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists2.txt)
+	message("this file is exists")
+else()
+	message("not exists")
+endif()
